# ml-serving

./: Makefile  README.md  pyproject.toml
.github/workflows/: build-ci.yaml
docker/: Dockerfile
ml_serving/: config.py  data_templates.py  main.py  model.py  object_storage.py
