[tool.poetry]
name = "ml-serving"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "ml_serving"}]

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^1.3.0"
fastapi = "^0.100.0"
uvicorn = "^0.22.0"
minio = "^7.1.15"
rich = "^13.4.2"
apscheduler = "^3.10.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
